# cst_geometry_manager

./: .gitignore  README.rst  pyproject.toml
cst_geometry/: _script.py
cst_geometry_manager/: geometry.py  simple_geometries.py
cst_projects/circular_geometry/Model/: PC_integration.json  Parameters.json
cst_projects/circular_geometry/Model/3D/: Model.abi  Model.dsn  Model.mod
cst_projects/circular_geometry/ModelCache/: Model.fct  Model.mif  Model.vde  Model.wir
cst_projects/circular_geometry/Result/: Model.res  Storage.sdb
cst_projects/circular_geometry/Result/MS/: Model.mspx
cst_projects/shortened_taper_rotated/Model/3D/: Model.abi  Model.hid  Model.mod
cst_projects/shortened_taper_rotated/ModelCache/: Model.hsu  Model.sab  Model.wir
examples/: export_to_cst_example.py  make_geometries_example.ipynb
examples/cst_projects/: circular_geometry.cst  shortened_taper_rotated.cst
examples/cst_projects/circular_geometry/Model/: Model.prj
examples/cst_projects/circular_geometry/Model/3D/: Model.bwc
examples/cst_projects/circular_geometry/ModelCache/: Model.chksm  Model.crd  Model.hsu  Model.sab  Model.sab.index
examples/cst_projects/shortened_taper_rotated/Model/: PC_integration.json  Parameters.json
examples/cst_projects/shortened_taper_rotated/ModelCache/: Model.chksm  Model.fct  Model.mif  Model.sab.index
examples/exported_geometries/: cubic_grid.txt  shortened_taper_rotated.txt
notebooks/: export_to_cst_example.ipynb  make_geometries_example.ipynb
notebooks/.ipynb_checkpoints/: example_geometries-checkpoint.ipynb
(+5 files in other folders)
