[tool.poetry]
name = "cst_geometry_manager"
version = "0.1.0"
description = ""
authors = ["konstantgr <60608301+konstantgr@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
